--- a/containers/front-end/public/css/style.css
+++ b/containers/front-end/public/css/style.css
@@ -1,6 +1,7 @@
 body{
   padding: 0px;
   margin: 0px;
+  font-family: Montserrat, Helvetica, sans-serif;
 }
 .container {
   width: 100vw;
@@ -12,30 +13,32 @@ body{
   width: 100%;
   display: flex;  
   flex-direction: column;
-  background-color: rgb(0, 217, 255);
+  background-color: #FEFFFF;
 }
 
 .sideInfo {
   width: 20%;
   flex-direction: column;
-  background-color: rgb(221, 0, 255);
+  background-color: #FEFFFF;
 }
 
 .title{
   height: 10%;
   display: flex;
   flex-direction: row;
-  border-bottom: 2px white solid;
+  border-bottom: 2px #B48E8E solid;
   align-items: center;
   align-content: center;
   justify-content: center;
+  color:  #EC5133;
+  font-size: 200%;
 }
 
 .map{
   height: 80%;
   display: flex;
   flex-direction: row;
-  background-color: rgb(87, 233, 87);
+  background-color: #FEFFFF;
   align-items: center;
   align-content: center;
   justify-content: center;
@@ -45,48 +48,64 @@ body{
   height: 10%;
   display: flex;
   flex-direction: row;
-  border-top: 2px white solid;
+  border-top: 2px #B48E8E solid;
   align-items: center;
   align-content: center;
   justify-content: center;
+  color:  #723936;
+  font-size: 200%;
 }
 
 .sideBlock{
   height: 33.3%;
   display: flex;
   flex-direction: column;
-  border-bottom: 2px white solid
+  border-bottom: 2px #B48E8E solid;
+  border-left: 2px #B48E8E solid;
 }
 
 .sideBlockBottom{
   height: 33.3%;
   display: flex;
   flex-direction: column;
-  background-color: orange;
+  background-color: #FEFFFF;
+  border-left: 2px #B48E8E solid;
 }
 
 .sideBlockImage{
   align-items: center;
   align-content: center;
   justify-content: center;
-  background-color: yellow;
+  background-color: #FEFFFF;
+  color: #EA998C;
 }
 
 .sideBlockSteps{
   height: 33.3%;
   display: flex;
   flex-direction: row;
-  border-bottom: 2px white solid;
   align-items: center;
   align-content: center;
   justify-content: center;
+  color: #EA998C;
 }
 .sideBlockCalories{
   height: 33.3%;
   display: flex;
   flex-direction: row;
-  border-bottom: 2px white solid;
   align-items: center;
   align-content: center;
   justify-content: center;
+  color: #EA998C;
+}
+
+.eventBlock{
+  fill: #CCB3B3;
+  stroke-width:0;
+  stroke:rgb(0,0,0);
+}
+
+.imageIcon{
+  height:50%;
+  width:50%;
 }
