--- a/containers/front-end/views/layout.pug
+++ b/containers/front-end/views/layout.pug
@@ -5,7 +5,7 @@ html(ng-app="dashBoardApp")
     base(href='/')
     title Secret Dashboard
     link(rel='stylesheet', href='/css/style.css')
-    script(src='js/lib/angular/angular.min.js')
-    script(src='js/app.js')
+    script(type="text/javascript" src='js/lib/angular/angular.min.js')
+    script(type="text/javascript" src='js/app.js')
   body
     block body
