Fix css for best practices
While working on adding linting for our CSS and HTML files, we found a
few small warnings. This commit fixes style.css for best practices.

Related-Issues: #11
Signed-off-by: Matt Langbehn <matthew.langbehn@gmail.com>

--- a/containers/front-end/public/css/style.css
+++ b/containers/front-end/public/css/style.css
@@ -1,6 +1,6 @@
 body{
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
 }
 .container {
   width: 100vw;
@@ -10,7 +10,7 @@ body{
 }
 .main {
   width: 100%;
-  display: flex;  
+  display: flex;
   flex-direction: column;
   background-color: rgb(0, 217, 255);
 }
