Add booth description text to map area
* Updated front-end to comply with backend changes with the conferences model
* Made booth description to be centered in the booth blocks within the map area

Related Issues: #30
Signed-off by: Darryl Balderas <drrylbalderas@gmail.com>

--- a/containers/front-end/src/app/dashboard/dashboard.component.html
+++ b/containers/front-end/src/app/dashboard/dashboard.component.html
@@ -8,7 +8,10 @@
             </app-main-display>
     </div>
     <div class="sideDisplay">
-        <app-side-display [steps]="steps" [calories]="calories"></app-side-display>
+        <app-side-display 
+            [steps]="steps" 
+            [calories]="calories">
+        </app-side-display>
     </div>
 
 </div>
