--- a/containers/front-end/src/app/main-display/main-display.component.html
+++ b/containers/front-end/src/app/main-display/main-display.component.html
@@ -1,6 +1,6 @@
-<div class="mainDisplayEventDescriptionContainer">
-    <div class="mainDisplayEventDescription">    
-        <span>{{conference.eventDescription }}</span>
+<div class="mainDisplayEventNameContainer">
+    <div class="mainDisplayEventName">    
+        <span>{{conference.eventName }} - {{conference.location}}</span>
     </div>
 </div>
 <div class="mainDisplayMapContainer" >
