Add side display images
Implemented responsive images on side display for the dashboard

Related Issues: #50
Signed-off by: Darryl Balderas <drrylbalderas@gmail.com>

--- a/containers/front-end/src/app/side-display/side-display.component.html
+++ b/containers/front-end/src/app/side-display/side-display.component.html
@@ -1,6 +1,6 @@
-<div class="sideBlock sideBlockImage">
-    <div>
-        Image
+<div class="sideBlock">
+    <div class="sideBlockImage">
+        <img src="../../assets/svg_assets/boy_pirate.svg" class="sideBlockPriateImage">
     </div>
 </div>
 <div class="sideBlock">
@@ -8,7 +8,7 @@
         <span> {{steps}} </span>
     </div>
     <div class="sideBlockSteps">
-        <span> Image </span>
+        <img src="../../assets/svg_assets/footprint_1.svg" class="sideBlockFootStepImage">
     </div>
     <div class="sideBlockSteps">
         <span> Steps </span>
@@ -19,7 +19,7 @@
         <span> {{calories}} </span>
     </div>
     <div class="sideBlockCalories">
-        <span> Image </span>
+        <img src="../../assets/svg_assets/scales.svg" class="sideBlockCalorieImage">
     </div>
     <div class="sideBlockCalories">
         <span> Calories</span>
