--- a/containers/front-end/src/app/side-display/side-display.component.css
+++ b/containers/front-end/src/app/side-display/side-display.component.css
@@ -13,16 +13,22 @@
   background-color: #FEFFFF;
   border-left: 3px #B48E8E solid;
 }
-  
-.sideBlockImage{
-  align-items: center;
-  align-content: center;
-  justify-content: center;
-  background-color: #FEFFFF;
-  color: #EA998C;
-  font-size: 2vw;
+
+.sideBlockPriateImage{
+  height: 20vh;
+  width: 20vw;
 }
-  
+
+.sideBlockFootStepImage{
+  height: 15vh;
+  width: 15vw;
+}
+
+.sideBlockCalorieImage{
+  height: 15vh;
+  width: 15vw;
+}
+
 .sideBlockSteps{
   height: 33.3%;
   display: flex;
@@ -43,4 +49,14 @@
   justify-content: center;
   color: #EA998C;
   font-size: 1.25vw
+}
+
+.sideBlockImage{
+  height: 80%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  color: #EA998C;
 }
