--- a/containers/front-end/src/app/side-display/side-display.component.css
+++ b/containers/front-end/src/app/side-display/side-display.component.css
@@ -8,6 +8,7 @@
 
 .sideBlockBottom{
   height: 33.3%;
+  width: 90%;
   display: flex;
   flex-direction: column;
   background-color: #FEFFFF;
@@ -31,6 +32,7 @@
 
 .sideBlockSteps{
   height: 33.3%;
+  width: 90%;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -52,7 +54,8 @@
 }
 
 .sideBlockImage{
-  height: 80%;
+  height: 90%;
+  width: 90%;
   display: flex;
   flex-direction: row;
   align-items: center;
