--- a/containers/front-end/src/app/side-display/side-display.component.html
+++ b/containers/front-end/src/app/side-display/side-display.component.html
@@ -1,6 +1,6 @@
 <div class="sideBlock">
     <div class="sideBlockImage">
-        <img src="../../assets/svg_assets/boy_pirate.svg" class="sideBlockPriateImage">
+        <img src="../../assets/svg_assets/boy_pirate.svg" class="sideBlockPriateImage" alt="boy private">
     </div>
 </div>
 <div class="sideBlock">
@@ -8,7 +8,7 @@
         <span> {{steps}} </span>
     </div>
     <div class="sideBlockSteps">
-        <img src="../../assets/svg_assets/footprint_1.svg" class="sideBlockFootStepImage">
+        <img src="../../assets/svg_assets/footprint_1.svg" class="sideBlockFootStepImage" alt="footprint">
     </div>
     <div class="sideBlockSteps">
         <span> Steps </span>
@@ -19,7 +19,7 @@
         <span> {{calories}} </span>
     </div>
     <div class="sideBlockCalories">
-        <img src="../../assets/svg_assets/scales.svg" class="sideBlockCalorieImage">
+        <img src="../../assets/svg_assets/scales.svg" class="sideBlockCalorieImage" alt="scale">
     </div>
     <div class="sideBlockCalories">
         <span> Calories</span>
