Access each conference event  via eventId
Implemented angular routing that can be queried through eventId for each event
Able to view different conferences and their map layout

Related Issues: #25
Sign-off by: Darryl Balderas < drrylbalderas@gmail.com>

--- a/containers/front-end/src/app/dashboard/dashboard.component.html
+++ b/containers/front-end/src/app/dashboard/dashboard.component.html
@@ -1,10 +1,10 @@
-<div *ngIf="conferences" class="container">
+<div *ngIf="conference" class="container">
     <div  class="mainDisplay">
             <app-main-display 
             [steps]="steps"
             [conferenceAttendees]="conferenceAttendees"
             [fitcoins]="fitcoins" 
-            [conferences]="conferences">
+            [conference]="conference">
             </app-main-display>
     </div>
     <div class="sideDisplay">
