--- a/containers/front-end/src/styles.css
+++ b/containers/front-end/src/styles.css
@@ -2,5 +2,9 @@
 body{
     padding: 0;
     margin: 0;
-    font-family: sans-serif;
+    font-family: 'Fredoka One', cursive, sans-serif;
+    /* font-family: 'Source Code Pro', monospace, sans-serif; */
+    /* font-family: 'Freckle Face', cursive; */
+    /* font-family: 'Roboto Mono', monospace, sans-serif; */
+    /* font-weight: bolder; */
 }
