--- a/containers/front-end/src/app/map-area/map-area.component.css
+++ b/containers/front-end/src/app/map-area/map-area.component.css
@@ -1,19 +1,19 @@
 .eventBlock {
   fill: #CCB3B3;
-  stroke-width:0;
-  stroke:rgb(0,0,0);
+  stroke-width: 1px;
+  stroke: rgb(0,0,0);
 }
 
 .beaconBlock {
   fill: rgb(255, 0, 0);
-  stroke-width:0;
-  stroke:rgb(0,0,0);
+  stroke-width: 1px;
+  stroke: rgb(0,0,0);
 }
 
 .boothText{
   fill: blue;
-  stroke-width:0;
-  stroke:rgb(0,0,0);
+  stroke-width: 0;
+  stroke: rgb(0,0,0);
   font-size: calc(0.30vw + 0.30vh + 0.30vmin);
   /* font-family: 'Source Code Pro', monospace, sans-serif; */
   /* font-family: 'Freckle Face', cursive; */
@@ -29,4 +29,17 @@
   align-items: center;
   align-content: center;
   justify-content: center;
+  z-index: 4;
+  position: absolute;
+  opacity: 0.63;
+}
+
+.heatmapArea {
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  position: absolute;
 }
