--- a/containers/front-end/src/app/main-display/main-display.component.html
+++ b/containers/front-end/src/app/main-display/main-display.component.html
@@ -11,6 +11,6 @@
 </div>
 <div class="mainDisplayFooterContainer">
     <div class="mainDisplayFooter">
-        <span> {{conferenceAttendees}} participants - {{steps}} km walked - {{fitcoins}} fitcoins earned </span>
+        <span> {{conferenceAttendees}} participants - {{steps}} km walked </span>
     </div>
 </div>
