Remove main display footer and update color scheme
Typescript lint corrections
Added new color scheme  svg icons

Related-issues: #106, #107
Signed-off by: Darryl Balderas <drrylbalderas@gmail.com>

--- a/containers/front-end/src/app/dashboard/dashboard.component.html
+++ b/containers/front-end/src/app/dashboard/dashboard.component.html
@@ -1,16 +1,14 @@
 <div *ngIf="conference" class="container">
     <div  class="mainDisplay">
             <app-main-display 
-            [steps]="steps"
-            [conferenceAttendees]="conferenceAttendees"
-            [fitcoins]="fitcoins" 
             [conference]="conference">
             </app-main-display>
     </div>
     <div class="sideDisplay">
         <app-side-display 
             [steps]="steps" 
-            [calories]="calories">
+            [calories]="calories"
+            [conferenceAttendees]="conferenceAttendees">
         </app-side-display>
     </div>
 
