--- a/containers/front-end/src/app/side-display/side-display.component.html
+++ b/containers/front-end/src/app/side-display/side-display.component.html
@@ -2,16 +2,23 @@
     <div class="sideBlockImage">
         <img src="../../assets/svg_assets/boy_pirate.svg" class="sideBlockPriateImage" alt="boy private">
     </div>
+    <div class="sideBlockImageText">
+        <span> {{steps}} km walked </span>
+    </div>
+    <div class="sideBlockImageText">
+        <span> {{conferenceAttendees}} participants </span>
+    </div>
+
 </div>
 <div class="sideBlock">
     <div class="sideBlockSteps">
         <span> {{steps}} </span>
     </div>
     <div class="sideBlockSteps">
-        <img src="../../assets/svg_assets/footprint_1.svg" class="sideBlockFootStepImage" alt="footprint">
+        <img src="../../assets/svg_assets/footprint.svg" class="sideBlockFootStepImage" alt="footprint">
     </div>
     <div class="sideBlockSteps">
-        <span> Steps </span>
+        <span> Total Steps </span>
     </div>
 </div>
 <div class="sideBlockBottom">
@@ -22,6 +29,6 @@
         <img src="../../assets/svg_assets/scales.svg" class="sideBlockCalorieImage" alt="scale">
     </div>
     <div class="sideBlockCalories">
-        <span> Calories</span>
+        <span> Total Calories</span>
     </div>
 </div>
