Update map-area component to d3.js implementation
Related issues: #111, #104
Signed-off by: Darryl Balderas <drrylbalderas@gmail.com>

--- a/containers/front-end/src/app/main-display/main-display.component.html
+++ b/containers/front-end/src/app/main-display/main-display.component.html
@@ -6,6 +6,7 @@
 <div class="mainDisplayMapContainer" >
         <app-map-area class="mainDisplayMap"
             [booths]="conference.map"
-            [beacons]="conference.beacons">
+            [beacons]="conference.beacons"
+            [eventName]="conference.eventName">
         </app-map-area>
 </div>
