--- a/containers/front-end/src/app/side-display/side-display.component.html
+++ b/containers/front-end/src/app/side-display/side-display.component.html
@@ -3,7 +3,7 @@
         <img src="../../assets/svg_assets/boy_pirate.svg" class="sideBlockPriateImage" alt="boy private">
     </div>
     <div class="sideBlockImageText">
-        <span> {{steps}} km walked </span>
+        <span> {{totalDistance}} km walked </span>
     </div>
     <div class="sideBlockImageText">
         <span> {{conferenceAttendees}} participants </span>
