--- a/containers/front-end/src/app/dashboard/dashboard.component.html
+++ b/containers/front-end/src/app/dashboard/dashboard.component.html
@@ -7,6 +7,7 @@
     <div class="sideDisplay">
         <app-side-display 
             [steps]="steps" 
+            [totalDistance]="totalDistance" 
             [calories]="calories"
             [conferenceAttendees]="conferenceAttendees">
         </app-side-display>
