Incorporate show think-dev-area
Signed-off by: Darryl Balderas <drrylbalderas@gmail.com>

--- a/containers/front-end/src/app/main-display/main-display.component.html
+++ b/containers/front-end/src/app/main-display/main-display.component.html
@@ -4,9 +4,11 @@
     </div>
 </div>
 <div class="mainDisplayMapContainer" >
-        <app-map-area class="mainDisplayMap"
-            [booths]="conference.map"
-            [beacons]="conference.beacons"
-            [eventName]="conference.eventName">
-        </app-map-area>
+    <app-map-area class="mainDisplayMap"
+        [booths]="conference.map"
+        [beacons]="conference.beacons"
+        [eventName]="conference.eventName"
+        [mapHeight]="conference.y"
+        [mapWidth]="conference.x">
+    </app-map-area>
 </div>
